--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/solady"]
 	path = lib/solady
 	url = https://github.com/Vectorized/solady
+[submodule "lib/GeneralisedIncentives"]
+	path = lib/GeneralisedIncentives
+	url = https://github.com/catalystdao/GeneralisedIncentives
