--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,10 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+via_ir = true
+optimizer = true
+optimizer_runs = 10000
+evm_version = "paris"
+solc_version = "0.8.22"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
